# CompliFlow

./: .env.example  .gitignore  README.md  STRATEGIC_IMPROVEMENTS.md  TESTING_GUIDE.md  YELLOW_SDK_INTEGRATION.md
apps/api/: Dockerfile  README.md  compliflow.db  pyproject.toml  pytest.ini  requirements.txt
apps/api/app/: main.py
apps/api/app/core/: config.py  crypto.py
apps/api/app/db/: models.py  session.py
apps/api/app/models/: audit_log.py  credential.py  intent.py  order.py  receipt.py  session.py  yellow.py
apps/api/app/routes/: audit.py  credential.py  intent.py  receipt.py  session.py  settlement.py  yellow.py
apps/api/app/services/: audit_service.py  policy_engine.py  receipt_signer.py  session_keys.py  session_service.py  yellow_client.py  yellow_websocket_client.py
apps/api/app/services/decision/: __init__.py  policy_engine.py  rules.py
apps/api/app/services/execution/: __init__.py  yellow_client.py  yellow_websocket_client.py
apps/api/app/services/proof/: __init__.py  receipt_signer.py  store.py
apps/api/app/services/session/: __init__.py  session_service.py
apps/api/app/services/settlement/: __init__.py  settlement_engine.py  (+1 more)
apps/api/app/tests/: conftest.py  test_audit_logging.py  test_credential.py  test_decision_engine.py  test_modes.py  test_proof_bundle.py  test_settlement_validation.py  test_yellow.py  test_yellow_order.py
apps/api/tests/integration/: README.md  test_workflow.py
apps/api/tests/unit/: test_audit_service.py  test_policy_engine.py  test_proof_bundle.py  test_receipt_routes.py  test_settlement_engine.py
(+25 files in other folders)
