[project]
name = "compliflow-api"
version = "0.1.0"
description = "CompliFlow backend API"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg[binary]",
    "redis",
    "python-dotenv",
    "cryptography",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]

[tool.uvicorn]
factory = false
